Se añadio funcionalidad de ip, y se creo el modulo de auditoria y ya registra las debidas actividades que hace el usuario

--- a/src/main/resources/static/css/style-to-register-user.css
+++ b/src/main/resources/static/css/style-to-register-user.css
@@ -99,7 +99,7 @@
     transition: opacity 0.3s ease;
 }
 
-.show-register-owner-pet {
+.show-register-user {
     pointer-events: auto;
     opacity: 1;
 }
