--- a/src/main/resources/static/css/empleado.css
+++ b/src/main/resources/static/css/empleado.css
@@ -9901,7 +9901,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-image: linear-gradient(180deg, #4e73df 10%, #2cbe22 100%);
   background-size: cover;
 }
 
@@ -10873,7 +10873,7 @@ a:focus {
 }
 
 .bg-password-image {
-  background: url("https://ubunlog.com/wp-content/uploads/2018/12/contrasena-clave.jpg");
+  background: url('./img/logoPass.png');
   background-position: center;
   background-size: cover;
 
@@ -11279,4 +11279,52 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+
+.drop-area{
+  border:5px dashed #ddd;
+  height:500px;
+  width:700px;
+  border-radius:5px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+}
+
+.drop-area span{
+  font-size:25px;
+  color:#000;
+}
+.drop-area button{
+  padding:10px 25px;
+  font-size:20px;
+  border:0;
+  outline:none;
+  background-color:#5256ad;
+  color:white;
+  border-radius:5px;
+  cursor:pointer;
+  margin:20px;
+}
+
+.file-container{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  padding:10px;
+  border:solid 1px #ddd;
+
+}
+#preview{
+  margin-top:10px;
+}
+.status-text{
+  padding:010px;
+}
+.success{
+  color:#52ad5a;
+}
+.failure{
+  color:#ff0000;
 }
